# poignant-porcupine

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst
libs/poignant-porcupine-core/: .readthedocs.yaml  pyproject.toml
libs/poignant-porcupine-core/docs/: Makefile  conf.py  index.rst
libs/poignant-porcupine-core/src/poignant_porcupine_core/: __init__.py  get_noon_on_same_day.py
libs/poignant-porcupine-core/test/: test_get_noon_on_same_day.py
libs/poignant-porcupine-domain/: .readthedocs.yaml  pyproject.toml
libs/poignant-porcupine-domain/docs/: conf.py  index.rst
libs/poignant-porcupine-domain/src/poignant_porcupine_domain/: __init__.py  day_of_week.py
libs/poignant-porcupine-domain/test/: test_day_of_week.py
