[project]
name = "poignant-porcupine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = [
    "libs/poignant-porcupine-core",
    "libs/poignant-porcupine-domain",
]

[tool.black]
line-length = 120
target-version = ["py314"]
