[project]
name = "poignant-porcupine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = [
    "libs/poignant-porcupine-core",
    "libs/poignant-porcupine-domain",
]

[tool.black]
line-length = 120
target-version = ["py314"]

[tool.mypy]
python_version = 3.14
warn_unused_configs = true
show_error_context = true
pretty = true
namespace_packages = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = [
    "libs/poignant-porcupine-core/src/**/*.py",
    "libs/poignant-porcupine-core/test/**/*.py",
    "libs/poignant-porcupine-domain/src/**/*.py",
    "libs/poignant-porcupine-domain/test/**/*.py",
]
