[project]
name = "poignant-porcupine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = [
    "libs/poignant-porcupine-core",
    "libs/poignant-porcupine-domain",
]

[tool.black]
line-length = 120
target-version = ["py314"]

[tool.mypy]
python_version = 3.14
warn_unused_configs = true
show_error_context = true
pretty = true
namespace_packages = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = [
    "libs/poignant-porcupine-core/src/**/*.py",
    "libs/poignant-porcupine-core/test/**/*.py",
    "libs/poignant-porcupine-domain/src/**/*.py",
    "libs/poignant-porcupine-domain/test/**/*.py",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py314"
src = [
    "libs/poignant-porcupine-core/src",
    "libs/poignant-porcupine-core/test",
    "libs/poignant-porcupine-domain/src",
    "libs/poignant-porcupine-domain/test",
]

[tool.ruff.lint]
select = [
    "D",
    "E",
    "F",
    "I",
    "N",
    "UP",
    "W",
]
ignore = [
    "D203",
    "D213",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["D100",]
"libs/**/docs/**" = ["D100",]
"libs/**/test/**" = ["D100", "D103",]

[tool.ruff.lint.isort]
known-first-party = [
    "poignant_porcupine_core",
    "poignant_porcupine_domain",
]

[tool.pytest.ini_options]
addopts = "--cov"
strict_markers = true
strict_xfail = true
testpaths = [
    "libs/poignant-porcupine-core/test",
    "libs/poignant-porcupine-domain/test",
]

[tool.coverage.run]
branch = true
source = [
    "libs/poignant-porcupine-core/src/poignant_porcupine_core",
    "libs/poignant-porcupine-domain/src/poignant_porcupine_domain",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true
skip_empty = true

[dependency-groups]
docs = [
    "sphinx>=9.1.0",
]
