[project]
name = "poignant-porcupine-domain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adam Carter", email = "adam.clayton.carter@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "poignant-porcupine-core",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.uv.sources]
poignant-porcupine-core = { workspace = true }
